<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu1"/>
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_wallet_black"
            android:title="@string/menu2" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_history"
            android:title="@string/menu3"/>

        <item
            android:id="@+id/navigation4"
            android:checked="false"
            android:icon="@drawable/ic_about"
            android:title="@string/menu4"/>

        <item
            android:id="@+id/navigation5"
            android:checked="false"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/menu5"/>



    </group>


</menu>