<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.hades.garbage.Register">
    <LinearLayout
        android:id="@+id/lytoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:layout_below="@+id/lytoolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:ems="10"
                    android:padding="7dp"
                    android:inputType="text">
                </EditText>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:ems="10"
                    android:padding="7dp"
                    android:inputType="textEmailAddress">
                </EditText>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <net.rimoto.intlphoneinput.IntlPhoneInput
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textSize="14sp"
                    app:textColor="#000000"
                    app:flagPaddingEnd="4dp"
                    app:flagPaddingStart="4dp"
                    app:flagPaddingTop="4dp"
                    app:flagPaddingBottom="4dp"
                    android:id="@+id/my_phone_input" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:ems="10"
                    android:inputType="textPassword">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_Send"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="220dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_progress_activity_signup"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


</RelativeLayout>
