<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hades.garbage.Profil">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000">

        <ImageView
            android:id="@+id/img"
            android:layout_width="394dp"
            android:layout_height="260dp"
            android:alpha="0.8"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profileImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_male_user" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00000000"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/edtHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00000000"
            android:hint="@string/hp"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="14sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>






    <!--<ScrollView-->
        <!--android:id="@+id/sclDetail"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:fadeScrollbars="true"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_below="@+id/lytoolbar">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/lytContent"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="10dp">-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->




            <!--</android.support.design.widget.TextInputLayout>-->


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/edtName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:hint="@string/name"-->
                    <!--android:ems="10"-->
                    <!--android:padding="7dp"-->
                    <!--android:inputType="textEmailAddress">-->
                <!--</EditText>-->

            <!--</android.support.design.widget.TextInputLayout>-->


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout5"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/edtHp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:hint="@string/hp"-->
                    <!--android:ems="10"-->
                    <!--android:inputType="number">-->
                <!--</EditText>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout6"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->


        <!--</android.support.design.widget.TextInputLayout>-->


            <!--<Button-->
                <!--android:id="@+id/btn_Save"-->
                <!--android:layout_width="139dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="220dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:text="@string/save"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:textColor="@android:color/background_light"-->
                <!--android:textStyle="bold" />-->
        <!--</LinearLayout>-->

    <!--</ScrollView>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_progress_activity_signup"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>